@@ -1,3 +1,11 @@
+2002-01-20  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/Makefile.am: add gconf-enum-types.h/gconf-enum-types.c 
+	files, thanks to Johan Dahlin
+
+	* gconf-2.0.pc.in (Libs): oops, we had Requires: bonobo-activation
+	still
+
 2002-01-16  Anders Carlsson  <andersca@gnu.org>
 
 	* gconf/gconf-client.c (gconf_client_get_full): Plug a leak.
